[metadata]
name = blindcharging-demo
version = 1.0.2
author = Joe Nudell
author_email = jnu@stanford.edu
description = This is the DEMO version of the SCPL blindcharging package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stanford-policylab/blind-charging-demo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
install_requires =
    click
python_requires = >=3.9

[options.packages.find]
where = src
